- When searching in the Select Weapon Accessory window, an indicator will be shown for accessories that are not compatible with the currently selected weapon's mounts.
- Implemented a bonus type (cyberlimbattributebonus) to provide AGI or STR bonuses to cyberware attribute bonuses. Example behaviour:
- Fixed MysAdeptAllowPpCareer, MysAdeptSecondMAGAttribute and PrioritySpellsAsAdeptPowers not saving values correctly when being disabled.

<!-- Simple values -->
<cyberlimbattributebonus>
    <name>STR</name>
    <val>2</val>
</cyberlimbattributebonus>

<!-- Rating-based values -->
<cyberlimbattributebonus>
    <name>AGI</name>
    <val>{Rating}</val>
</cyberlimbattributebonus>

<!-- FixedValues arrays -->
<cyberlimbattributebonus>
    <name>STR</name>
    <val>[1,2,3,4,5]</val>
</cyberlimbattributebonus>

<!-- Character attribute expressions -->
<cyberlimbattributebonus>
    <name>AGI</name>
    <val>{STR}/2</val>
</cyberlimbattributebonus>

<!-- Complex mathematical expressions -->
<cyberlimbattributebonus>
    <name>STR</name>
    <val>({Rating} * 2) + 1</val>
</cyberlimbattributebonus>

Data Changes:
- Corrected the categories (and therefore also mounts, concealabilities, and ranges) for the Krime AKM-SU97, the Krime Ditch, the Krime Stopper-II, the Krime Soldier, and the Krime Ripper as per forum errata found here: https://jackpoint.live/index.php?topic=31750.msg544923#msg544923.
- Vocal Expansion can now properly only be taken at Betaware, Deltaware, or Gammaware grades and now properly adds conditional limit modifiers. Existing characters with this bioware will need to reapply improvements to get these bonuses.
- Internal Synthlink now doubles the cost of the instrument into which it is taken instead of adding double the cost to the instrument. This is based on the way Internal Smartgun's cost is described in the core rulebook.
- Fixed the Unrestricted Kill Code Qualities customdata not working correctly to allow non-technomancers taking the qualities.